v1.5 Fix issue with mouse cursor not showing over expandable menu elements.

--- a/css/eatlas_responsive_menus.css
+++ b/css/eatlas_responsive_menus.css
@@ -53,6 +53,10 @@
 	display: block;
 }
 
+.eatlas-responsive-menu-container ul.accordion-menu > li.expanded > a {
+	cursor: pointer;
+}
+
 /* Close sub-menus - jQuery will open the active trail sub-menu */
 .eatlas-responsive-menu-container ul.accordion-menu > li > ul {
 	display: none;
